[gd_scene load_steps=9 format=3 uid="uid://ci7087cujbi07"]

[ext_resource type="Script" path="res://scripts/TitleController.gd" id="1_ev5ys"]
[ext_resource type="SystemFont" uid="uid://7da4r7pmsgxw" path="res://fonts/button_font.tres" id="1_vt7hl"]
[ext_resource type="StyleBox" uid="uid://drnkh7rc7uga8" path="res://themes/box_style_button_flat.tres" id="2_wuktl"]
[ext_resource type="StyleBox" uid="uid://cjxq1drapt3uk" path="res://themes/box_style_button_hover.tres" id="6_tfl8d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2j20"]
bg_color = Color(0.65098, 0.65098, 0.65098, 0.368627)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjv0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dy3f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xpy7"]
content_margin_top = 300.0

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("level_select", "level_select_focus", "main_screen", "main_screen_focus", "level_select_container")]
script = ExtResource("1_ev5ys")
level_select = NodePath("LevelSelect")
level_select_focus = NodePath("LevelSelect/Panel/Panel2/VBoxContainer/BackBtn")
main_screen = NodePath("Main")
main_screen_focus = NodePath("Main/VBoxContainer/StartBtn")
level_select_container = NodePath("LevelSelect/Panel/ScrollContainer/VBoxContainer")

[node name="Main" type="PanelContainer" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_w2j20")

[node name="VBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="StartBtn" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_vt7hl")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("2_wuktl")
theme_override_styles/hover = ExtResource("6_tfl8d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pjv0h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4dy3f")
theme_override_styles/focus = ExtResource("6_tfl8d")
text = "Start"

[node name="OptionsBtn" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_vt7hl")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("2_wuktl")
theme_override_styles/hover = ExtResource("6_tfl8d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pjv0h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4dy3f")
theme_override_styles/focus = ExtResource("6_tfl8d")
text = "Options"

[node name="ExitBtn" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_vt7hl")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("2_wuktl")
theme_override_styles/hover = ExtResource("6_tfl8d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pjv0h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4dy3f")
theme_override_styles/focus = ExtResource("6_tfl8d")
text = "Exit"

[node name="LevelSelect" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_3xpy7")

[node name="Panel" type="VBoxContainer" parent="LevelSelect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Panel3" type="PanelContainer" parent="LevelSelect/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_w2j20")

[node name="Label" type="Label" parent="LevelSelect/Panel/Panel3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.803922, 0.364706, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_vt7hl")
theme_override_font_sizes/font_size = 100
text = "Level select"

[node name="ScrollContainer" type="ScrollContainer" parent="LevelSelect/Panel"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="PanelContainer" parent="LevelSelect/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_w2j20")

[node name="VBoxContainer" type="HBoxContainer" parent="LevelSelect/Panel/Panel2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="BackBtn" type="Button" parent="LevelSelect/Panel/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_vt7hl")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("2_wuktl")
theme_override_styles/hover = ExtResource("6_tfl8d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pjv0h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4dy3f")
theme_override_styles/focus = ExtResource("6_tfl8d")
text = "Back"

[connection signal="pressed" from="Main/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="LevelSelect/Panel/Panel2/VBoxContainer/BackBtn" to="." method="_on_level_select_back_btn_pressed"]
